# hrnet-pose-estimation

./: .gitignore  NOTICE  install.sh  pyproject.toml
demo/: inference.py
experiments/coco/hrnet/: w48_384x288_adam_lr1e-3.yaml
experiments/mpii/hrnet/: w32_256x256_adam_lr1e-3.yaml
lib/config/: default.py  models.py
lib/core/: evaluate.py  function.py  inference.py  loss.py
lib/dataset/: JointsDataset.py  coco.py  mpii.py
lib/models/: pose_resnet.py
lib/nms/: nms.py  setup_linux.py
lib/utils/: utils.py  vis.py  zipreader.py
tools/: _init_paths.py  inference.py  test.py  train.py
visualization/: plot_coco.py
