[tool.poetry]
name = "hrnet-pose-estimation"
version = "0.1.0"
description = ""
authors = ["Sasha Illarionov <sasha@sdll.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "^1.5.1"
opencv-python = "^4.3.0"
easydict = "^1.9"
shapely = "^1.7.0"
scipy = "^1.5.1"
pandas = "^1.0.5"
Cython = "^0.29.20"
pyyaml = "^5.3.1"
json_tricks = "^3.15.2"
scikit-image = "^0.17.2"
yacs = "^0.1.7"
tensorboardX = "^2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
